--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "BeLand Contracts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "truffle migrate --reset",
+    "compile": "truffle compile",
+    "test": "npx builder test",
+    "coverage": "npx builder coverage"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,19 @@
   },
   "homepage": "https://github.com/belandsoft/beland-contracts#readme",
   "devDependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@nomiclabs/buidler": "^1.4.7",
+    "@nomiclabs/buidler-ethers": "^2.0.0",
+    "@nomiclabs/buidler-truffle5": "^1.3.4",
+    "@nomiclabs/buidler-waffle": "^2.0.0",
+    "@nomiclabs/buidler-web3": "^1.3.4",
+    "@openzeppelin/contracts": "^4.5.0",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.0.0",
+    "ethers": "^5.0.14",
+    "ganache-cli": "^6.12.2",
+    "solidity-coverage": "^0.7.13",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "truffle-plugin-verify": "^0.4.0",
+    "web3": "^1.3.0"
   }
 }
