--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "^0.4.0",
     "web3": "^1.3.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts-upgradeable": "^4.5.2"
   }
 }
